# agile_grasp2

./: CMakeLists.txt  README.md  package.xml
caffe/: sigmoid_lenet.prototxt  test_1batch2.prototxt
include/agile_grasp2/: antipodal.h  caffe_classifier.h  cloud_camera.h  finger_hand.h  grasp_detector.h  grasp_hypothesis.h  hand_search.h  handle.h  handle_search.h  importance_sampling.h  learning.h  local_frame.h  plot.h  quadric.h
include/nodes/: classification_node.h  grasp_detection_node.h
launch/: antifixed_detect_grasps_active.launch  antifixed_detect_grasps_passive.launch  antifixed_detect_grasps_verified.launch  classify_grasps.launch  file_detect_grasps.launch  file_importance_sampling.launch  fixed_detect_grasps_active.launch  focus_robot_detect_grasps.launch  ijrr_active.launch  ijrr_objects.launch  ijrr_passive.launch  objects_passive.launch  optical_flow_detect_grasps.launch  robot_detect_grasps.launch  test_cnn.launch  video_detect_grasps.launch
msg/: CloudIndexed.msg  DensityGraspListMsg.msg  DensityGraspMsg.msg  GraspListMsg.msg  GraspMsg.msg  SamplesMsg.msg
scripts/: deploy_classifier.py  grasps_client_test.py
src/agile_grasp2/: antipodal.cpp  caffe_classifier.cpp  cloud_camera.cpp  finger_hand.cpp  grasp_detector.cpp  grasp_hypothesis.cpp  hand_search.cpp  handle.cpp  handle_search.cpp  importance_sampling.cpp  learning.cpp  local_frame.cpp  plot.cpp  quadric.cpp
src/caffe/: gpd_classification.cpp
src/nodes/: classification_node.cpp  classify_grasps.cpp  detect_grasps.cpp  detect_grasps_file.cpp  grasp_detection_node.cpp
src/tests/: test_cnn.cpp
srv/: Classify.srv  FindGrasps.srv
